<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity"
        android:layout_margin="20dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/log_logo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/instagram"
            app:layout_constraintBottom_toTopOf="@id/log_Email_lay"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:id="@+id/log_Email_lay"
            app:layout_constraintTop_toBottomOf="@id/log_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/log_Pass_lay"
            android:layout_marginTop="70dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/log_Email"
                android:hint="@string/login_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:id="@+id/log_Pass_lay"
            app:layout_constraintTop_toBottomOf="@id/log_Email_lay"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/log_Btn"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/log_Pass"
                android:hint="@string/login_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/log_forPass"
            android:text="@string/login_forgot_password"
            app:layout_constraintTop_toBottomOf="@id/log_Pass_lay"
            app:layout_constraintLeft_toLeftOf="@id/log_Pass_lay"
            android:layout_marginTop="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/log_Btn"
            android:text="@string/login_loginBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/log_Pass_lay"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="45dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/log_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/log_SignUp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/login_label"
            android:textSize="17sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/log_SignUp"
            android:text="@string/log_SignUp"
            android:textColor="#FF2F58CD"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="30dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>